2007-07-30  Guillem Jover  <guillem@debian.org>

	* data/ca.kid: Fix URLs to CSS, javascript, logo and translated files

2007-07-30  Guillem Jover  <guillem@debian.org>

	* data/ca.kid: Fix self URL to point to the basedir instead of the cgi.

2007-07-30  Guillem Jover  <guillem@debian.org>

	* bin/l10n-closebugs: Switch from bugs.debian.org to
	bts2ldap.debian.net for the LDAP server.

2007-07-30  Jordà Polo  <jorda@ettin.org>
            Guillem Jover  <guillem@debian.org>

	* cgi-bin/l10n: New file
	* data/ca.kid: Likewise.
	* data/l10n.sql: Likewise.
	* www/logo.png: Likewise.
	* www/sorttable.js: Likewise.
	* www/style.css: Likewise.
	* bin/l10n-bot: Switch from MySQL to SQLite.
	* bin/l10n-closebugs: Likewise.
	* etc/apache.conf: Add cgi support.
	* db/l10n_create.sql: Remove.
	* db/l10n_drop.sql: Likewise.
	* www/index.ca.php: Likewise.
	* www/index.en.php: Likewise.
	* www/index.php: Likewise.

2007-07-29  Guillem Jover  <guillem@debian.org>

	* l10n-bot: Move to ...
	* bin/l10n-bot: ... here.
	* l10n-closebugs: Move to ...
	* bin/l10n-closebugs: ... here.
	* l10n_create.sql: Move to ...
	* db/l10n_create.sql: ... here.
	* l10n_drop.sql: Move to ...
	* db/l10n_drop.sql: ... here.
	* index.ca.php: Move to ...
	* www/index.ca.php: ... here.
	* index.en.php: Move to ...
	* www/index.en.php: ... here.
	* intro.ca.html: Move to ...
	* www/intro.ca.html: ... here.
	* intro.ca.txt: Move to ...
	* www/intro.ca.txt: ... here.
	* pseudo-urls.ca.html: Move to ...
	* www/pseudo-urls.ca.html: ... here.
	* pseudo-urls.en.html: Move to ...
	* www/pseudo-urls.en.html: ... here.

2007-05-26  Guillem Jover  <guillem@debian.org>

	* intro.ca.html: Switch to UTF-8.
	* intro.ca.txt: Likewise.

2007-05-26  Guillem Jover  <guillem@debian.org>

	* intro.ca.html: Update link to the Debian i18n material.
	* intro.ca.txt: Likewise.

2007-04-04  Guillem Jover  <guillem@debian.org>

	* intro.ca.html: Update link to the latest softcatala catalan
	terminology.
	* intro.ca.txt: Likewise.
