@@ -1,3 +1,10 @@
+2007-07-30  Jordà Polo  <jorda@ettin.org>
+
+	* cgi-bin/l10n: Do not print two new lines after Content-Type, and
+	output xhtml-strict.
+	* data/ca.kid: Add ${cat} to the table class.
+	* www/style.css: Use upper case for message type.
+
 2007-07-30  Guillem Jover  <guillem@debian.org>
 
 	* data/ca.kid: Fix URLs to CSS, javascript, logo and translated files
